# MultiCobot-UR10-Gripper

./: .travis.yml  CITATION.cff  Documento sin título  Gemfile  LICENSE  README (copia).html  README.md  README_ENG (copia).html  README_ENG.md  README_ESP.md  _config.yml  proyect_setup.md
_data/: navigation.yml
_docs/: 01-introduction.md  02-requirements.md  03-ros-kinetic-dependencies.md  04-ros-packages.md  05-lm-setup.md  06-testing-setup.md  07-design-multi-robot-system.md  08-own-motion-planning.md  09-own-one.md  10-own-two.md  11-own-four.md  12-moveit-motion-planning.md  13-moveit-one.md  14-moveit-two.md  15-moveit-four.md  16-lm-design-integration.md  17-lm-own-one.md  18-lm-own-two.md  19-lm-moveit-one.md  20-lm-moveit-two.md  21-campero.md  22-license.md  23-help-support.md  24-authors.md  25-acknowledgment.md  26-recognition.md
_layouts/: default.html  single.html
_pages/: about.md  archive-layout-with-content.md  category-archive.md  collection-archive.html  edge-case.md  home.md  lorem-ipsum.md  markup.md  page-a.md  page-archive.html  page-b.md  pets.md  portfolio-archive.md  post-archive-feature-rows.html  recipes-archive.md  sample-page.md  sitemap.md  splash-page.md  tag-archive.md  terms.md  year-archive.md
_site/: 404.html  feed.xml  index.html  robots.txt  sitemap.xml
_site/about/: index.html
_site/archive-layout-with-content/: index.html
_site/categories/: index.html
_site/categories/edge-case/: index.html
_site/collection-archive/: index.html
_site/docs/acknowledgement/: index.html
_site/docs/authors/: index.html
_site/docs/design-multi-robot-system/: index.html
_site/docs/help-support/: index.html
_site/docs/introduction/: index.html
_site/docs/license/: index.html
_site/docs/lm-design-integration/: index.html
_site/docs/lm-moveit-one/: index.html
_site/docs/lm-moveit-two/: index.html
_site/docs/lm-own-one/: index.html
_site/docs/lm-own-two/: index.html
_site/docs/lm-setup/: index.html
_site/docs/lm-setup-testing/: index.html
_site/docs/moveit-four/: index.html
_site/docs/moveit-motion-planning/: index.html
_site/docs/moveit-one/: index.html
_site/docs/moveit-two/: index.html
_site/docs/own-four/: index.html
_site/docs/own-one/: index.html
_site/docs/own-planner-solution/: index.html
_site/docs/own-two/: index.html
_site/docs/recognition/: index.html
_site/docs/requirements/: index.html
_site/docs/robot-campero/: index.html
_site/docs/ros-dependencies/: index.html
_site/docs/ros-packages/: index.html
_site/lorem-ipsum/: index.html
_site/page-a/: index.html
_site/page-archive/: index.html
_site/page-b/: index.html
_site/pets/: index.html
_site/portfolio/: index.html
_site/post-archive-feature-rows/: index.html
_site/recipes/: index.html
_site/sample-page/: index.html
_site/sitemap/: index.html
_site/splash-page/: index.html
_site/tags/: index.html
_site/tags/markup/: index.html
_site/terms/: index.html
_site/year-archive/: index.html
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: four_arm_moveit_config.pc  four_arm_moveit_description.pc  four_arm_moveit_gazebo.pc  four_arm_moveit_manipulator.pc  four_arm_no_moveit_description.pc  four_arm_no_moveit_gazebo.pc  four_arm_no_moveit_manipulator.pc  one_arm_moveit_config.pc  one_arm_moveit_description.pc  one_arm_moveit_gazebo.pc  one_arm_moveit_leap_motion.pc  one_arm_moveit_manipulator.pc  one_arm_no_moveit_description.pc  one_arm_no_moveit_gazebo.pc  one_arm_no_moveit_leap_motion.pc  one_arm_no_moveit_manipulator.pc  two_arm_moveit_config.pc  two_arm_moveit_description.pc  two_arm_moveit_gazebo.pc  two_arm_moveit_leap_motion.pc  two_arm_moveit_manipulator.pc  two_arm_no_moveit_description.pc  two_arm_no_moveit_gazebo.pc  two_arm_no_moveit_leap_motion.pc  two_arm_no_moveit_manipulator.pc
doc/: design-eng.md  design-lm-eng.md  design-lm.md  design.md  moveit-intro-eng.md  moveit-intro.md  no-moveit-intro-eng.md  no-moveit-intro.md
doc/moveit/ENG/: four_arm_moveit.md  one_arm_moveit.md  one_arm_moveit_lm.md  two_arm_moveit.md  two_arm_moveit_lm.md
doc/moveit/ESP/: four_arm_moveit.md  one_arm_moveit.md  one_arm_moveit_lm.md  two_arm_moveit.md  two_arm_moveit_lm.md
doc/no_moveit/ENG/: four_arm_no_moveit.md  one_arm_no_moveit.md  one_arm_no_moveit_lm.md  two_arm_no_moveit.md  two_arm_no_moveit_lm.md
doc/no_moveit/ESP/: four_arm_no_moveit.md  one_arm_no_moveit.md  one_arm_no_moveit_lm.md  two_arm_no_moveit.md  two_arm_no_moveit_lm.md
doc/setup-doc/: proyect_setup.md  proyect_setup_eng.md
doc/setup-doc/ENG/: install-ROS.md  install-ros-packages.md  leap-motion.md  pruebas.md
doc/setup-doc/ESP/: install-ROS.md  install-ros-packages.md  leap-motion.md  pruebas.md
imgs_md/: four_arm_moveit_frames.gv  two_arm_moveit_frames.gv
moveit/: four_arm_moveit.md  one_arm_moveit.md  two_arm_moveit.md  two_arm_moveit_lm.md
moveit/ESP/: four_arm_moveit.md  one_arm_moveit_lm.md
no_moveit/: four_arm_no_moveit.md  one_arm_no_moveit.md
no_moveit/ESP/: one_arm_no_moveit.md  one_arm_no_moveit_lm.md  two_arm_no_moveit_lm.md
setup-doc/: proyect_setup.md
setup-doc/ESP/: install-ROS.md  install-ros-packages.md  leap-motion.md  pruebas.md
src/gazebo-pkgs/gazebo_grasp_plugin_ros/: CMakeLists.txt
src/gazebo-pkgs/gazebo_version_helpers/: CMakeLists.txt
src/leap_motion/: CMakeLists.txt
src/leap_motion/LeapSDK/include/: Leap.i
src/leap_motion/msg/: Arm.msg  Hand.msg  leapcobotleft.msg  leapcobotright.msg
src/leap_motion/scripts/: skeleton_sender.py
src/leap_motion/src/: lmc_listener.cpp  lmc_visualizer_node.cpp
src/robotiq_85_gripper/robotiq_85_driver/: CMakeLists.txt
src/robotiq_85_gripper/robotiq_85_driver/src/robotiq_85/: robotiq_85_driver.py  robotiq_85_gripper_test.py  robotiq_85_test_close.py
src/robotiq_85_gripper/robotiq_85_simulation/roboticsgroup_gazebo_plugins/: CMakeLists.txt
src/robotiq_85_gripper/robotiq_85_simulation/roboticsgroup_gazebo_plugins/src/: mimic_joint_plugin.cpp
src/ros_control/transmission_interface/: CMakeLists.txt
(+349 files in other folders)
